k8s/env/public/deployment-image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: website
spec:
  template:
    spec:
      containers:
      - name: website
        image: ghcr.io/o-p-n/website@sha256:fe57b9c617bdc5b78ffca08553562dc28c4f91c75a0a3b0a3967a472ff92066a
